fixed header spacing

--- a/css/style.css
+++ b/css/style.css
@@ -8,18 +8,11 @@ body {
   margin: 50px auto;
   max-width: 600px;
 }
-pre {
-  background: #f0f0f0;
-  border: 1px solid #ddd;
-  color: #666;
-  padding: 0 16px;
-}
 .description {
   width: 60%;
 }
-a {
-  color: #d04242;
-  text-decoration: none;
+.description p {
+  margin-top: 0;
 }
 .button {
   background: #d04242;
@@ -27,12 +20,22 @@ a {
   color: white;
   display: inline-block;
   float: right;
-  margin: 20px 0 20px 10px;
+  margin: 0 0 20px 10px;
   padding: 8px 16px;
+  text-decoration: none;
+}
+a {
+  color: #d04242;
   text-decoration: none;
 }
 hr {
   clear: both;
+}
+pre {
+  background: #f0f0f0;
+  border: 1px solid #ddd;
+  color: #666;
+  padding: 0 16px;
 }
 .example-grid .grid {
   border-collapse: collapse;
